# imagedecoder.mpo

./: CMakeLists.txt
depends/windows/libjpeg-turbo/: flags.txt  libjpeg-turbo.txt
